--- a/lab/exercise2/style.css
+++ b/lab/exercise2/style.css
@@ -86,6 +86,18 @@ a {
 }
 
 
+@media(max-width: 500px) {
+    #navigation {
+        width: 100%;
+        height: 100%;
+    }
+    
+    content {
+        width: 100vw;
+        font-size: 20px; 
+    }
+  
+}
 
 
 
