--- a/screensaver/style.css
+++ b/screensaver/style.css
@@ -1594,6 +1594,139 @@ body{
 
 
 
+
+
+
+
+#c98g{
+    background: #d92276;
+     width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 0vw;
+    margin-top: 97vh;
+    position: absolute;
+    border-color: #6e2c90;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -1;
+     opacity: 0;
+    transition: 1s;
+}
+
+#c98f{
+    background: #d92276;
+     width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 15vw;
+    margin-top: 98vh;
+    position: absolute;
+    border-color: #6e2c90;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -1;
+     opacity: 0;
+    transition: 1s;
+}
+
+
+#c98e{
+    background: #d92276;
+     width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 30vw;
+    margin-top: 100vh;
+    position: absolute;
+    border-color: #6e2c90;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -1;
+     opacity: 0;
+    transition: 1s;
+}
+
+
+
+
+#c98d{
+    background: #d92276;
+     width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 45vw;
+    margin-top: 102vh;
+    position: absolute;
+    border-color: #6e2c90;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -1;
+     opacity: 0;
+    transition: 1s;
+}
+
+#c98c{
+    background: #d92276;
+     width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 58vw;
+    margin-top: 100vh;
+    position: absolute;
+    border-color: #6e2c90;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -1;
+     opacity: 0;
+    transition: 1s;
+}
+
+
+
+
+
+
+
+
+
+#c98b{
+    background: #d92276;
+     width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 70vw;
+    margin-top: 98vh;
+    position: absolute;
+    border-color: #6e2c90;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -1;
+     opacity: 0;
+    transition: 1s;
+}
+
+
+
+
+
+#c98a{
+    background: #d92276;
+     width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 79vw;
+    margin-top: 93vh;
+    position: absolute;
+    border-color: #6e2c90;
+    border-width: 30px;
+    border-style: solid;
+    z-index: 0;
+     opacity: 0;
+    transition: 1s;
+}
+
+
 #c98{
     background: #d92276;
      width: 60px;
@@ -2902,6 +3035,113 @@ body{
     transition: 1s;
    
 }
+#c178a{
+    background: #FFF44F;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 98vw;
+    margin-top: 61vh;
+    position: absolute;
+    border-color: #32CD32;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -1;
+    opacity: 0;
+    transition: 1s;
+   
+}
+
+
+#c178b{
+    background: #FFF44F;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 98vw;
+    margin-top: 76vh;
+    position: absolute;
+    border-color: #32CD32;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -2;
+    opacity: 0;
+    transition: 1s;
+   
+}
+
+#c178c{
+    background: #FFF44F;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 98vw;
+    margin-top: 89vh;
+    position: absolute;
+    border-color: #32CD32;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -2;
+    opacity: 0;
+    transition: 1s;
+   
+}
+
+
+#c178d{
+    background: #FFF44F;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 120vw;
+    margin-top: 80vh;
+    position: absolute;
+    border-color: #32CD32;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -2;
+    opacity: 0;
+    transition: 1s;
+   
+}
+
+
+#c178e{
+    background: #FFF44F;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 118vw;
+    margin-top: 66vh;
+    position: absolute;
+    border-color: #32CD32;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -2;
+    opacity: 0;
+    transition: 1s;
+   
+}
+
+#c178f{
+    background: #FFF44F;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 111vw;
+    margin-top: 51vh;
+    position: absolute;
+    border-color: #32CD32;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -2;
+    opacity: 0;
+    transition: 1s;
+   
+}
+
+
+
 
 #c179{
     background: #6e2c90;
@@ -3831,6 +4071,47 @@ body{
 }
 
 
+
+
+
+
+
+
+#c237b{
+    background: #006d66;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 98vw;
+    margin-top: 32vh;
+    position: absolute;
+    border-color: #f70027;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -3;
+    opacity: 0;
+    transition: 1s;
+}
+
+
+
+
+#c237a{
+    background: #006d66;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    margin-left: 100vw;
+    margin-top: 25vh;
+    position: absolute;
+    border-color: #f70027;
+    border-width: 30px;
+    border-style: solid;
+    z-index: -1;
+    opacity: 0;
+    transition: 1s;
+}
+
 #c237{
     background: #006d66;
     width: 60px;
@@ -4500,8 +4781,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
-    opacity: 0;
-    transition: 1s;
+ 
 }
 
 #c279{
@@ -4516,8 +4796,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1; 
-     opacity: 0;
-    transition: 1s;
+     
 }
 
 #c280{
@@ -4532,8 +4811,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
-     opacity: 0;
-    transition: 1s;
+     
 }
 
 #c281{
@@ -4548,8 +4826,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1; 
-     opacity: 0;
-    transition: 1s;
+    
 }
 
 #c282{
@@ -4564,8 +4841,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
-     opacity: 0;
-    transition: 1s;
+     
 }
 
 #c283{
@@ -4580,8 +4856,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
-     opacity: 0;
-    transition: 1s;
+    
 }
 
 #c284{
@@ -4596,8 +4871,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
-     opacity: 0;
-    transition: 1s;
+   
 }
 
 #c285{
@@ -4612,8 +4886,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1; 
-     opacity: 0;
-    transition: 1s;
+   
 }
 
 #c286{
@@ -4628,8 +4901,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1; 
-     opacity: 0;
-    transition: 1s;
+     
 }
 
 #c287{
@@ -4644,8 +4916,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1; 
-     opacity: 0;
-    transition: 1s;
+     
 }
 
 #c288{
@@ -4660,8 +4931,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1; 
-     opacity: 0;
-    transition: 1s;
+    
 }
 
 #c289{
@@ -4676,8 +4946,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1; 
-     opacity: 0;
-    transition: 1s;
+     
 }
 
 
@@ -4693,8 +4962,7 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
-     opacity: 0;
-    transition: 1s;
+     
 }
 
 #c291{
@@ -4709,21 +4977,94 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
-     opacity: 0;
-    transition: 1s;
+    
 }
 
 
+#c292{
+    background: #495ca9;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    margin-left: 100vw;
+    margin-top: 10.5vh;
+    position: absolute;
+    border-color: #009fb7;
+    border-width: 10px;
+    border-style: solid;
+    z-index: -1;
+}
 
 
+#c293{
+    background: #495ca9;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    margin-left: 105vw;
+    margin-top: 8vh;
+    position: absolute;
+    border-color: #009fb7;
+    border-width: 10px;
+    border-style: solid;
+    z-index: -1;
+}
 
+#c294{
+    background: #495ca9;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    margin-left: 100vw;
+    margin-top: 6vh;
+    position: absolute;
+    border-color: #009fb7;
+    border-width: 10px;
+    border-style: solid;
+    z-index: -1;
+}
 
+#c295{
+    background: #495ca9;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    margin-left: 106vw;
+    margin-top: 4vh;
+    position: absolute;
+    border-color: #009fb7;
+    border-width: 10px;
+    border-style: solid;
+    z-index: -1;
+}
 
+#c296{
+    background: #495ca9;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    margin-left: 103vw;
+    margin-top: 1vh;
+    position: absolute;
+    border-color: #009fb7;
+    border-width: 10px;
+    border-style: solid;
+    z-index: -1;
+}
 
-
-
-
-
+#c297{
+    background: #495ca9;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    margin-left: 100vw;
+    margin-top: -3vh;
+    position: absolute;
+    border-color: #009fb7;
+    border-width: 10px;
+    border-style: solid;
+    z-index: -1;
+}
 
 
 
