--- a/studio/screensaver/style.css
+++ b/studio/screensaver/style.css
@@ -4781,7 +4781,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
- 
+    opacity: 0;
+    transition: 1s;
 }
 
 #c279{
@@ -4795,7 +4796,10 @@ body{
     border-color: #009fb7;
     border-width: 10px;
     border-style: solid;
-    z-index: -1; 
+    z-index: -1;
+    opacity: 0;
+    transition: 1s;
+    
      
 }
 
@@ -4811,6 +4815,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
      
 }
 
@@ -4826,6 +4832,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1; 
+    opacity: 0;
+    transition: 1s;
     
 }
 
@@ -4841,6 +4849,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
      
 }
 
@@ -4856,6 +4866,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
     
 }
 
@@ -4871,6 +4883,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
    
 }
 
@@ -4885,7 +4899,9 @@ body{
     border-color: #009fb7;
     border-width: 10px;
     border-style: solid;
-    z-index: -1; 
+    z-index: -1;
+    opacity: 0;
+    transition: 1s;
    
 }
 
@@ -4900,7 +4916,9 @@ body{
     border-color: #009fb7;
     border-width: 10px;
     border-style: solid;
-    z-index: -1; 
+    z-index: -1;
+    opacity: 0;
+    transition: 1s;
      
 }
 
@@ -4915,7 +4933,9 @@ body{
     border-color: #009fb7;
     border-width: 10px;
     border-style: solid;
-    z-index: -1; 
+    z-index: -1;
+    opacity: 0;
+    transition: 1s;
      
 }
 
@@ -4931,6 +4951,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1; 
+    opacity: 0;
+    transition: 1s;
     
 }
 
@@ -4945,7 +4967,9 @@ body{
     border-color: #009fb7;
     border-width: 10px;
     border-style: solid;
-    z-index: -1; 
+    z-index: -1;
+    opacity: 0;
+    transition: 1s;
      
 }
 
@@ -4962,6 +4986,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
      
 }
 
@@ -4977,6 +5003,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
     
 }
 
@@ -4993,6 +5021,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
 }
 
 
@@ -5008,6 +5038,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
 }
 
 #c294{
@@ -5022,6 +5054,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
 }
 
 #c295{
@@ -5036,6 +5070,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
 }
 
 #c296{
@@ -5050,6 +5086,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
 }
 
 #c297{
@@ -5064,6 +5102,8 @@ body{
     border-width: 10px;
     border-style: solid;
     z-index: -1;
+    opacity: 0;
+    transition: 1s;
 }
 
 
